--- a/SoftyCinema/package.json
+++ b/SoftyCinema/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.4.5",
+    "react-star-ratings": "^2.3.0",
     "styled-components": "^6.1.0",
     "swiper": "^10.3.1"
   },
