--- a/package.json
+++ b/package.json
@@ -12,15 +12,21 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.14",
+    "@mui/material": "^5.14.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "antd": "^5.10.1",
+    "formik": "^2.4.5",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-loader-spinner": "^5.4.5",
+    "react-router-dom": "^6.17.0",
     "react-star-ratings": "^2.3.0",
+    "sort-by": "^1.2.0",
     "styled-components": "^6.1.0",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
