--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-loader-spinner": "^5.4.5",
     "react-router-dom": "^6.17.0",
     "react-star-ratings": "^2.3.0",
+    "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.0",
     "swiper": "^10.3.1",
