--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "@reduxjs/toolkit": "^1.9.7",
     "antd": "^5.10.1",
+    "axios": "^1.6.0",
     "formik": "^2.4.5",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
