--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.14.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.2",
     "@reduxjs/toolkit": "^1.9.7",
+    "@tanstack/react-query": "^5.4.3",
     "antd": "^5.10.1",
     "axios": "^1.6.0",
     "formik": "^2.4.5",
